service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-service
  namespace: dev
spec:
  selector: # A Selector lets you filter resources based on their labels. Redirects towards a specific deployment.
    app: wil-playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
